docs: Add comprehensive project README, usage guide, schema format, and project details, and modify index.html.

--- a/index.html
+++ b/index.html
@@ -863,7 +863,13 @@
                                     ]+$"</span><br />
                                 }
                             </div>
-                            <div class="schema-header" style="border-top: 1px solid var(--border)">Component Usage</div>
+                            <div class="schema-header"
+                                style="border-top: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center;">
+                                Component Usage
+                                <a href="/storybook/?path=/story/molecules-text-question--default" target="_blank"
+                                    style="font-size: 0.8em; color: var(--primary); text-decoration: none;">View in
+                                    Storybook &rarr;</a>
+                            </div>
                             <div class="code-pane">
                                 &lt;dfr-text-question<br />
                                 &nbsp;&nbsp;id=<span class="token-string">"firstName"</span><br />
@@ -926,7 +932,13 @@
                                     class="token-string">"2025-12-31"</span><br />
                                 }
                             </div>
-                            <div class="schema-header" style="border-top: 1px solid var(--border)">Component Usage</div>
+                            <div class="schema-header"
+                                style="border-top: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center;">
+                                Component Usage
+                                <a href="/storybook/?path=/story/molecules-date-question--default" target="_blank"
+                                    style="font-size: 0.8em; color: var(--primary); text-decoration: none;">View in
+                                    Storybook &rarr;</a>
+                            </div>
                             <div class="code-pane">
                                 &lt;dfr-date-question<br />
                                 &nbsp;&nbsp;id=<span class="token-string">"effectiveDate"</span><br />
@@ -994,7 +1006,13 @@
                                     class="token-bool">10000</span><br />
                                 }
                             </div>
-                            <div class="schema-header" style="border-top: 1px solid var(--border)">Component Usage</div>
+                            <div class="schema-header"
+                                style="border-top: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center;">
+                                Component Usage
+                                <a href="/storybook/?path=/story/molecules-number-question--default" target="_blank"
+                                    style="font-size: 0.8em; color: var(--primary); text-decoration: none;">View in
+                                    Storybook &rarr;</a>
+                            </div>
                             <div class="code-pane">
                                 &lt;dfr-number-question<br />
                                 &nbsp;&nbsp;id=<span class="token-string">"squareFootage"</span><br />
@@ -1072,7 +1090,13 @@
                                 &nbsp;&nbsp;]<br />
                                 }
                             </div>
-                            <div class="schema-header" style="border-top: 1px solid var(--border)">Component Usage</div>
+                            <div class="schema-header"
+                                style="border-top: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center;">
+                                Component Usage
+                                <a href="/storybook/?path=/story/molecules-select-question--default" target="_blank"
+                                    style="font-size: 0.8em; color: var(--primary); text-decoration: none;">View in
+                                    Storybook &rarr;</a>
+                            </div>
                             <div class="code-pane">
                                 &lt;dfr-select-question<br />
                                 &nbsp;&nbsp;id=<span class="token-string">"status"</span><br />
@@ -1142,7 +1166,14 @@
                                     class="token-bool">4</span>, <span class="token-bool">5</span>]<br />
                                 }
                             </div>
-                            <div class="schema-header" style="border-top: 1px solid var(--border)">Component Usage</div>
+                            <div class="schema-header"
+                                style="border-top: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center;">
+                                Component Usage
+                                <a href="/storybook/?path=/story/molecules-number-select-question--default"
+                                    target="_blank"
+                                    style="font-size: 0.8em; color: var(--primary); text-decoration: none;">View in
+                                    Storybook &rarr;</a>
+                            </div>
                             <div class="code-pane">
                                 &lt;dfr-number-select-question<br />
                                 &nbsp;&nbsp;id=<span class="token-string">"rating"</span><br />
