docs: Add usage guide, question schema definitions for text and date inputs, project documentation, and update index.html.

--- a/index.html
+++ b/index.html
@@ -695,6 +695,8 @@
                 </div>
                 <div class="nav-links">
                     <a href="https://shadowsmith.com" target="_blank">A Shadow Smith Project</a>
+                    <a href="https://github.com/heyshadowsmith/declarative-form-rendering" target="_blank">View on
+                        GitHub</a>
                 </div>
             </nav>
         </div>
@@ -1242,10 +1244,6 @@
                 </p>
                 <div class="install-cmd">
                     <span>$</span> npm i declarative-form-rendering
-                </div>
-                <div class="footer-links">
-                    <a href="USAGE.md">Read the Docs</a>
-                    <a href="https://github.com/heyshadowsmith/declarative-form-rendering">View on GitHub</a>
                 </div>
             </div>
         </section>
